# enum_mapping

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: rust.yml
src/: enum_map.rs  helpers.rs  lib.rs
tests/: basic.rs  errors.rs  errors.stderr  expand.rs  no_to.rs  no_to.stderr  test.rs
