[package]
name = "enum_maping"
version = "0.1.0"
edition = "2021"
autotests = false
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[[test]]
name = "dev_expand"
path = "tests/expand.rs"

[dev-dependencies]
trybuild = { version = "*", features = ["diff"] }

[dependencies]
syn = { version = "*", features = ["extra-traits", "full", "parsing"] }
quote = "*"
proc-macro2 = "*"