[package]
name = "enum_maping"
version = "0.1.0"
edition = "2021"
autotests = false
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.86", features = ["full", "parsing"] }
quote = "1.0.15"
proc-macro2 = "1.0.36"

[[test]]
name = "tests"
path = "tests/test.rs"

[[test]]
name = "expand"
path = "tests/expand.rs"

[dev-dependencies]
trybuild = { version = "1.0.55", features = ["diff"] }